--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
             </form>
             <a href="#" class="forgot-password">Forgot password?</a>
             <hr>
-            <p class="create-account">Don't have an account? <a href="#" class="signup-link">Sign up</a></p>
+            <p class="create-account">Already have an account? <a href="signup.html">Sign up</a></p>
         </div>
     </div>
 </body>
